--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           </h1>
           <p class="text">
             I have hands-on experience on UX design process and A/B testing.
-            My vision is to be a T-shaped professional. I am passinate about graphic design, industrial design
-            and photography. Great designs makes me excited.
+            My vision is to be a T-shaped professional. I am passionate about graphic design, industrial design
+            and photography. Great design makes me excited.
           </p>
         </div>
       </div>
@@ -141,13 +141,14 @@
               <p class="client">Client: ENTA</p>
               <p class="employer">Employer: Freelance</p>
               <p class="text">ENTA project is one of the largest projects I have worked and managed up until now. I
-                contributed the
+                have contributed to the
                 project by working with the client, the designer and the back-end developer. The project includes
-                official pages, careers and association membership modules, totally 26 page templates and the JavaScript
+                official pages, careers and association membership modules corresponding 26 HTML-CSS templates and the
+                JavaScript
                 related with them.</p>
               <p class="text">We scaled the CSS and JS by writing them
                 in component based. The JavaScript is written in object literal pattern. We used SCSS, jQuery, .NET MVC,
-                npm, Gulp and Git in the project.</p>
+                npm, Gulp and Git.</p>
               <a class="link" href="https://www.enta.org.tr" target="_blank">enta.org.tr</a>
           </div>
           <div class="screen-mockup">
@@ -171,8 +172,9 @@
             <h2 class="title">E-Bursum Socail Startup</h1>
               <p class="client">Client: E-Bursum</p>
               <p class="employer">Employer: Taze</p>
-              <p class="text">E-Bursum is a start-up where the students and scholarship providers meet and it is one of
-                the largerst platform in Turkey. I have developed UI components, some basic interactions mostly used on
+              <p class="text">E-Bursum is a start-up where students and scholarship providers meet and it is the one of
+                the largest scholarship platforms in Turkey. I have developed UI components, some basic interactions
+                mostly used on
                 websites. We used HTML, SCSS, jQuery, Gulp, npm and Git. I used revealing pattern in the JavaScript.</p>
               <a class="link" href="https://www.e-bursum.com" target="_blank">e-bursum.com</a>
           </div>
@@ -197,10 +199,11 @@
             <h2 class="title">IOX Trend Reports Page</h1>
               <p class="client">Client: IOX</p>
               <p class="employer">Employer: Freelance</p>
-              <p class="text">Trend Reports is listing more or less 120 trending topics in 13 categories in the design,
+              <p class="text">'Trend Reports' lists more or less 120 trending topics in 13 categories in design,
                 technology and business fields.</p>
-              <p class="text">I heavily used JavaScript in this project. I got the data using jQuery Ajax and rendered
-                components dynamically. I have used HTML, SCSS, jQuery with Gulp, npm and Git.</p>
+              <p class="text">I have heavily used JavaScript in this project. I have fetched the data by using jQuery
+                Ajax and rendered
+                the components dynamically. I have used HTML, SCSS, jQuery with Gulp, npm and Git.</p>
               <a class="link" href="https://www.ioxdigital.com/trend-reports"
                 target="_blank">ioxdigital.com/trend-reports</a>
           </div>
@@ -225,12 +228,12 @@
             <h2 class="title">IOX Blend the Trend Page</h1>
               <p class="client">Client: IOX</p>
               <p class="employer">Employer: Freelance</p>
-              <p class="text">Blend the Trend helps people to discover innovative ideas by encouraging them to pick 3
+              <p class="text">'Blend the Trend' helps people to discover innovative ideas by encouraging them to pick 3
                 cards randomly in design, technology and business categories at once. Teams or people try to
                 discover new ideas including the topics they have picked.</p>
-              <p class="text">I have fetched the card and category data with jQuery AJAX and render them randomly based
-                on
-                user's click event. It was a cool project. I have used HTML, SCSS, jQuery with Gulp, npm and Git.</p>
+              <p class="text">I have fetched the data of the cards and the categories with jQuery AJAX and rendered them
+                randomly based
+                on user's click event. I have used HTML, SCSS, jQuery with Gulp, npm and Git.</p>
               <a class="link" href="https://www.ioxdigital.com/blend-the-trend"
                 target="_blank">ioxdigital.com/blend-the-trend</a>
           </div>
@@ -281,7 +284,8 @@
               <p class="client">Client: Userspots</p>
               <p class="employer">Employer: Taze</p>
               <p class="text">Fiat Case was a case study project for Userspots. It is a static website. Page changes are
-                made in a full screen transition form via a jQuery library. I also worked on HTML and SCSS with Gulp,
+                done in a full screen transition form via a jQuery library. I also have worked on HTML and SCSS with
+                Gulp,
                 npm and Git.</p>
               <a class="link" href="https://www.userspots.com/cases/fiat" target="_blank">userspots.com/cases/fiat</a>
           </div>
@@ -307,7 +311,7 @@
               <p class="client">Client: Userspots</p>
               <p class="employer">Employer: Taze</p>
               <p class="text">Tofaş Case was a case study project for Userspots. It is a static website and It was one
-                of the my early works at Taze. I have mostly worked on HTML and SCSS with Gulp, npm and Git.</p>
+                of my early works at Taze. I have mostly worked on HTML and SCSS with Gulp, npm and Git.</p>
               <a class="link" href="http://www.userspots.com/tofas-intranet/"
                 target="_blank">userspots.com/tofas-intranet</a>
           </div>
@@ -334,7 +338,7 @@
               <p class="employer">Employer: Taze</p>
               <p class="text">I have prepared a static website for Userspots UXCamp 2018 event. It is a static website
                 and It
-                was one of the my early works at Taze. I have mostly worked on HTML and SCSS with Gulp, npm and Git.</p>
+                was one of my early works at Taze. I have mostly worked on HTML and SCSS with Gulp, npm and Git.</p>
               <a class="link" href="https://www.userspots.com/uxcamp" target="_blank">userspots.com/uxcamp</a>
           </div>
           <div class="screen-mockup">
@@ -362,24 +366,26 @@
               <li class="item">
                 <h2 class="title">Freelance - Eskişehir</h2>
                 <p class="duration">Front-End Developer, July 2018 to Current</p>
-                <p class="text">I understand and help my clients, depending on their needs not only in front-end but
+                <p class="text">I understand and help my clients depending on their needs not only in front-end but
                   also
                   in UX/UI design and visual communication processes as a consultant.</p>
               </li>
               <li class="item">
                 <h2 class="title">Taze - İstanbul</h2>
                 <p class="duration">Junior Front-End Developer, September 2017 to July 2018</p>
-                <p class="text">I have contributed 11 small or mid-sized projects as a junior front-end developer and
-                  content manager at Taze. I learnt project management process and some tools to work in a better way. I
-                  was exposed well designed projects.</p>
+                <p class="text">I have contributed to 11 small or mid-sized projects as a junior front-end developer and
+                  content manager at Taze. I have learnt project management process and some tools to work efficiently.
+                  I
+                  have had a chance to work on well designed projects.</p>
               </li>
               <li class="item">
                 <h2 class="title">Devtailor - Estonia</h2>
                 <p class="duration">Internship, July 2016 to February 2017</p>
                 <p class="text">I have designed the UI and created the template of the <a
                     href="https://www.fantasy.express/" target="_blank">Fantasy Experss</a> which is a tiny gaming tool
-                  by using HTML, SCSS and Photoshop. I learnt the basic front-end workflow in this project. The project
-                  depends on node.js and Angular.
+                  by using HTML, SCSS and Photoshop. I have learnt the basic front-end workflow in this project. The
+                  project
+                  relies on node.js and Angular.
                 </p>
               </li>
             </ul>
@@ -424,14 +430,17 @@
             <ul class="list">
               <li class="item">
                 <h2 class="title">Coding <br> Skills</h2>
-                <p class="subtitle">Html, Css, Sass, Javascript (ES6), Angular, Jquery, Gsap, Design Patterns</p>
-                <p class="text">I do component based development, working pragmatically, technology agnostic. Lastly
-                  clean code and design patterns matters!</p>
+                <p class="subtitle">HTML, CSS, SASS, Javascript (ES6), Angular, jQuery, Design Patterns, ESLint, TSLint
+                </p>
+                <p class="text">I do component based development and follow the pragmatic approach to front-end. I am a
+                  technology agnostic which basically means that I choose tools considering needs, budget and
+                  time. Clean code and design patterns matter to me.</p>
               </li>
               <li class="item">
                 <h2 class="title">Coding <br> Tools</h2>
                 <p class="subtitle">Gulp, Npm, Git, Iterm</p>
-                <p class="text">Tools help us to enhance our work efficiency and make it easy to follow best practices.
+                <p class="text">Tools help us to enhance work efficiency, optimization and make it easy to follow best
+                  practices.
                   Currently I am interested in Webpack.</p>
               </li>
               <li class="item">
@@ -439,7 +448,7 @@
                 <p class="subtitle">Photoshop, Figma, Trello, Miro, Google Drive/Docs, Slack</p>
                 <p class="text">Being a part of a team is more than being just a developer. To be in-sync with other
                   team members is crucial. I use best tools in that purpose. I am able to solve minor
-                  design needs by myself and capable to use Figma as a prototyping tool. I use miro - realtimeboard to
+                  design needs by myself and capable to use Figma as a prototyping tool. I use miro-realtimeboard to
                   communicate visually in my projects.</p>
               </li>
             </ul>
@@ -467,7 +476,9 @@
             <!-- about-box -->
             <div class="about-box">
               <h1 class="title">About Me</h1>
-              <p class="text">My first international working experience was in Devtailor based in Tallinn, Estonia. I
+              <p class="text">My first international work experience was in <a href="https://www.devtailor.com/"
+                  target="_blank">Devtailor</a> in
+                Tallinn, Estonia. I
                 have experienced how to design a
                 web application with the approach of MVP (Minimum Viable Product), worked with some low-fi prototypes
                 for designing apps
@@ -476,21 +487,19 @@
                 Manager in my projects, improved my CSS development speed and process. This was a good ‘welcome’ to the
                 industry in
                 2017.</p>
-              <p class="text">2018 was the year that i started to get involved writing more JavaScript and i covered
+              <p class="text">2018 was the year that I started to get involved writing more JavaScript and I covered
                 very important
                 concepts with the
-                language and learned a couple of design patterns. It helped me a lot to organize and maintain my code.I
+                language and learnt a couple of design patterns. It helped me a lot to organize and maintain my code. I
                 have delivered
-                many tiny and a couple of mid-sized web projects. I have attended as an instructor to the fron-end camp
+                many tiny and a couple of mid-sized web projects. I have attended as an instructor to the Front-End Camp
                 2018, organised
-                by Taze. Check out my presentation.
+                by <a href="https://tazebt.com/" target="_blank">Taze.</a>
+                <a href="https://www.slideshare.net/CihanBaran1/temel-basic-html-ve-css-frontend-camp-2018"
+                  target="_blank">Check out my presentation.</a>
+
               </p>
-              <p class="text">In the short term respectively I am going to focus writing more ES2015 JS, start writing
-                Angular apps,
-                design and
-                developing more web animations, release my first front-end package and keep designing websites,
-                posters, taking photos
-                and running as a hobby.
+              <p class="text">Currently I have focused on ES2015, Angular and Webpack.
               </p>
               <ul class="list">
                 <li class="item">
