--- a/index.html
+++ b/index.html
@@ -430,22 +430,22 @@
             <ul class="list">
               <li class="item">
                 <h2 class="title">Coding <br> Skills</h2>
-                <p class="subtitle">HTML, CSS, SASS, Javascript (ES6), Angular, jQuery, Design Patterns, ESLint, TSLint
+                <p class="subtitle">HTML, CSS, SASS, Javascript (ES6), Angular, jQuery, Design Patterns
                 </p>
                 <p class="text">I do component based development and follow the pragmatic approach to front-end. I am a
                   technology agnostic which basically means that I choose tools considering needs, budget and
-                  time. Clean code and design patterns matter to me.</p>
+                  time. Clean code and design patterns matter.</p>
               </li>
               <li class="item">
                 <h2 class="title">Coding <br> Tools</h2>
-                <p class="subtitle">Gulp, Npm, Git, Iterm</p>
+                <p class="subtitle">Gulp, Npm, Git, ESLint, TSLint, Iterm</p>
                 <p class="text">Tools help us to enhance work efficiency, optimization and make it easy to follow best
                   practices.
                   Currently I am interested in Webpack.</p>
               </li>
               <li class="item">
                 <h2 class="title">Other <br> Tools</h2>
-                <p class="subtitle">Photoshop, Figma, Trello, Miro, Google Drive/Docs, Slack</p>
+                <p class="subtitle">Photoshop, Figma, Trello, Miro-realtimeboard, Google Drive/Docs, Slack</p>
                 <p class="text">Being a part of a team is more than being just a developer. To be in-sync with other
                   team members is crucial. I use best tools in that purpose. I am able to solve minor
                   design needs by myself and capable to use Figma as a prototyping tool. I use miro-realtimeboard to
