--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <ul class="list">
           <li class="item">Html5</li>
           <li class="item">Css3</li>
-          <li class="item">Npm</li>
-          <li class="item">Git</li>
-          <li class="item highlight">Js</li>
+          <li class="item">Redux</li>
+          <li class="item highlight">React</li>
+          <li class="item ">Js</li>
           <li class="item">Gulp</li>
         </ul>
       </div>
@@ -84,65 +84,98 @@
             <li class="item">
               <a class="link" href="#project-1">
                 <h5 class="title">Industrial Designers Association Website</h5>
-                <img src="dist/img/enta.jpg" alt="enta homepage screen">
+                <img src="dist/img/jotform.jpg" alt="jotform homepage screen">
               </a>
             </li>
             <!-- item -->
             <li class="item">
               <a class="link" href="#project-2">
+                <h5 class="title">Industrial Designers Association Website</h5>
+                <img src="dist/img/enta.jpg" alt="enta homepage screen">
+              </a>
+            </li>
+            <!-- item -->
+            <li class="item">
+              <a class="link" href="#project-3">
                 <h5 class="title">E-Bursum Social Startup</h5>
                 <img src="dist/img/taze-e-bursum.jpg" alt="e-bursum homepage screen">
               </a>
             </li>
             <!-- item -->
             <li class="item">
-              <a class="link" href="#project-3">
+              <a class="link" href="#project-4">
                 <h5 class="title">IOX Trend Reports</h5>
                 <img src="dist/img/iox-trend-reports.jpg" alt="iox trend reports page screen">
               </a>
             </li>
             <!-- item -->
             <li class="item">
-              <a class="link" href="#project-4">
+              <a class="link" href="#project-5">
                 <h5 class="title">IOX Blend the Trend</h5>
                 <img src="dist/img/iox-blend-the-trend.jpg" alt="iox blend the trend page screen">
               </a>
             </li>
             <!-- item -->
             <li class="item">
-              <a class="link" href="#project-5">
+              <a class="link" href="#project-6">
                 <h5 class="title">MikroX Pre-Accountancy Website</h5>
                 <img src="dist/img/taze-mikrox.jpg" alt="mikrox website homepage screen">
               </a>
             </li>
             <!-- item -->
             <li class="item">
-              <a class="link" href="#project-6">
+              <a class="link" href="#project-7">
                 <h5 class="title">Userspots Fiat Case Study</h5>
                 <img src="dist/img/taze-fiat.jpg" alt="fiat case study homepage screen">
               </a>
             </li>
             <!-- item -->
             <li class="item">
-              <a class="link" href="#project-7">
+              <a class="link" href="#project-8">
                 <h5 class="title">Userspots Tofaş Case Study</h5>
                 <img src="dist/img/taze-tofas.jpg" alt="tofaş case study homepage screen">
               </a>
             </li>
             <!-- item -->
-            <li class="item">
+            <!-- <li class="item">
               <a class="link" href="#project-8">
                 <h5 class="title">Userspots UXCamp</h5>
                 <img src="dist/img/taze-uxcamp.jpg" alt="uxcamp homepage screen">
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
     </section>
 
-    <!-- project-1 enta-->
+    <!-- project-1 jotform-->
     <section id="project-1" class="page project-page">
+      <div class="container">
+        <div class="project">
+          <div class="content">
+            <h2 class="title">Jotform</h1>
+              <!-- <p class="client">Client: Jotform</p>
+              <p class="employer">Employer: Jotform</p> -->
+              <p class="text">Jotform enables you to create online forms, collect responses directly in your email, and create fillable PDF forms.</p>
+              <p class="text">I worked at Jotform respectively at Maintenance Team, Growth Hackers Team and Engagement Hackers Team (current).</p>
+              <p class="text">I contributed the Support Forum's Text Editor, a bunch of localization tools, product walkthrough, onboarding funnels, many A/B tests and some components used across the Jotform.</p>
+              <a class="link" href="https://www.jotform.com" target="_blank">jotform.com</a>
+          </div>
+          <div class="screen-mockup">
+            <div class="part-1">
+              <figure class="img-container">
+                <img src="dist/img/jotform.jpg" alt="jotform homepage screen">
+              </figure>
+            </div>
+            <div class="part-2"></div>
+            <div class="part-3"></div>
+            <div class="part-4"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- project-2 enta-->
+    <section id="project-2" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -173,8 +206,8 @@
         </div>
       </div>
     </section>
-    <!-- project-2 e-bursum  -->
-    <section id="project-2" class="page project-page">
+    <!-- project-3 e-bursum  -->
+    <section id="project-3" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -200,8 +233,8 @@
         </div>
       </div>
     </section>
-    <!-- project-3 trend-reports -->
-    <section id="project-3" class="page project-page">
+    <!-- project-4 trend-reports -->
+    <section id="project-4" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -229,8 +262,8 @@
         </div>
       </div>
     </section>
-    <!-- project-4 blend-the-trend -->
-    <section id="project-4" class="page project-page">
+    <!-- project-5 blend-the-trend -->
+    <section id="project-5" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -259,8 +292,8 @@
         </div>
       </div>
     </section>
-    <!-- project-5 microx -->
-    <section id="project-5" class="page project-page">
+    <!-- project-6 microx -->
+    <section id="project-6" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -284,8 +317,8 @@
         </div>
       </div>
     </section>
-    <!-- project-6 fiat-case-study -->
-    <section id="project-6" class="page project-page">
+    <!-- project-7 fiat-case-study -->
+    <section id="project-7" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -311,8 +344,8 @@
         </div>
       </div>
     </section>
-    <!-- project-7 tofas-case-study-->
-    <section id="project-7" class="page project-page">
+    <!-- project-8 tofas-case-study-->
+    <section id="project-8" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -337,8 +370,8 @@
         </div>
       </div>
     </section>
-    <!-- project-8 uxcamp-->
-    <section id="project-8" class="page project-page">
+    <!-- project-9 uxcamp-->
+    <!-- <section id="project-9" class="page project-page">
       <div class="container">
         <div class="project">
           <div class="content">
@@ -362,7 +395,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- experience-page -->
     <section id="experience-section" class="page experience-page">
@@ -373,8 +406,13 @@
           <div class="content">
             <ul class="list">
               <li class="item">
+                <h2 class="title">Jotform - Ankara</h2>
+                <p class="duration">Front-End Developer, August 2019 to Current</p>
+                <p class="text">I am a member of the Engagement Hackers Team, I was also a part of the Growth Hackers and Maintenance Team before.</p>
+              </li>
+              <li class="item">
                 <h2 class="title">Freelance - Eskişehir</h2>
-                <p class="duration">Front-End Developer, July 2018 to Current</p>
+                <p class="duration">Front-End Developer, July 2018 to August 2019</p>
                 <p class="text">I understand and help my clients depending on their needs not only in front-end but
                   also
                   in UX/UI design and visual communication processes as a consultant.</p>
@@ -439,25 +477,25 @@
             <ul class="list">
               <li class="item">
                 <h2 class="title">Coding <br> Skills</h2>
-                <p class="subtitle">HTML, CSS, SASS, Javascript (ES6), Angular, jQuery, Design Patterns
+                <p class="subtitle">React, Redux, Javascript (ES6), HTML, CSS, SASS, A/B Testing.
                 </p>
-                <p class="text">I do component based development and follow the pragmatic approach to front-end. I am a
+                <p class="text">I mostly develop components and follow the pragmatic approach to front-end. I am a
                   technology agnostic which basically means that I choose tools considering needs, budget and
-                  time. Clean code and design patterns matter.</p>
+                  time.</p>
               </li>
               <li class="item">
                 <h2 class="title">Coding <br> Tools</h2>
-                <p class="subtitle">Gulp, Npm, Git, ESLint, TSLint, Iterm</p>
+                <p class="subtitle">CI, Webpack, Gulp, Npm, Git, ESLint, Iterm</p>
                 <p class="text">Tools help us to enhance work efficiency, optimization and make it easy to follow best
                   practices.
-                  Currently I am interested in Webpack.</p>
+                </p>
               </li>
               <li class="item">
                 <h2 class="title">Other <br> Tools</h2>
-                <p class="subtitle">Photoshop, Figma, Trello, Miro-realtimeboard, Google Drive/Docs, Slack</p>
+                <p class="subtitle">Fullstory, Hotjar, Test.IO, Figma, Trello, Miro.</p>
                 <p class="text">Being a part of a team is more than being just a developer. To be in-sync with other
                   team members is crucial. I use best tools in that purpose. I am able to solve minor
-                  design needs by myself and capable to use Figma as a prototyping tool. I use miro-realtimeboard to
+                  design needs by myself and capable to use Figma as a prototyping tool. I use miro to
                   communicate visually in my projects.</p>
               </li>
             </ul>
