--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!-- item -->
             <li class="item">
               <a class="link" href="#project-1">
-                <h5 class="title">Industrial Designers Association Website</h5>
+                <h5 class="title">Jotform</h5>
                 <img src="dist/img/jotform.jpg" alt="jotform homepage screen">
               </a>
             </li>
@@ -158,7 +158,7 @@
               <p class="employer">Employer: Jotform</p> -->
               <p class="text">Jotform enables you to create online forms, collect responses directly in your email, and create fillable PDF forms.</p>
               <p class="text">I worked at Jotform respectively at Maintenance Team, Growth Hackers Team and Engagement Hackers Team (current).</p>
-              <p class="text">I contributed the Support Forum's Text Editor, a bunch of localization tools, product walkthrough, onboarding funnels, many A/B tests and some components used across the Jotform.</p>
+              <p class="text">I contributed the Support Forum's text editor, a bunch of localization tools, product walkthrough, onboarding funnels, many A/B tests and some components used across the Jotform.</p>
               <a class="link" href="https://www.jotform.com" target="_blank">jotform.com</a>
           </div>
           <div class="screen-mockup">
@@ -191,7 +191,7 @@
               <p class="text">We scaled the CSS and JS by writing them
                 in component based. The JavaScript is written in object literal pattern. We used SCSS, jQuery, .NET MVC,
                 npm, Gulp and Git.</p>
-              <a class="link" href="https://www.enta.org.tr" target="_blank">enta.org.tr</a>
+              <a class="link" href="javascript:" target="_blank">enta.org.tr</a>
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -218,7 +218,7 @@
                 the largest scholarship platforms in Turkey. I have developed UI components, some basic interactions
                 mostly used on
                 websites. We used HTML, SCSS, jQuery, Gulp, npm and Git. I used revealing pattern in the JavaScript.</p>
-              <a class="link" href="https://www.e-bursum.com" target="_blank">e-bursum.com</a>
+              <a class="link" href="javascript:" target="_blank">e-bursum.com</a>
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -246,7 +246,7 @@
               <p class="text">I have heavily used JavaScript in this project. I have fetched the data by using jQuery
                 Ajax and rendered
                 the components dynamically. I have used HTML, SCSS, jQuery with Gulp, npm and Git.</p>
-              <a class="link" href="https://www.ioxdigital.com/trend-reports"
+              <a class="link" href="javascript:"
                 target="_blank">ioxdigital.com/trend-reports</a>
           </div>
           <div class="screen-mockup">
@@ -276,7 +276,7 @@
               <p class="text">I have fetched the data of the cards and the categories with jQuery AJAX and rendered them
                 randomly based
                 on user's click event. I have used HTML, SCSS, jQuery with Gulp, npm and Git.</p>
-              <a class="link" href="https://www.ioxdigital.com/blend-the-trend"
+              <a class="link" href="javascript:"
                 target="_blank">ioxdigital.com/blend-the-trend</a>
           </div>
           <div class="screen-mockup">
@@ -302,7 +302,7 @@
               <p class="employer">Employer: Taze</p>
               <p class="text">I have delivered the front-end templates given by the design team at Taze. I have used
                 HTML, SCSS, jQuery, Gulp, npm and Git as a tech stack.</p>
-              <a class="link" href="https://www.mikrox.com.tr" target="_blank">mikrox.com.tr</a>
+              <a class="link" href="javascript:" target="_blank">mikrox.com.tr</a>
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -329,7 +329,7 @@
                 done in a full screen transition form via a jQuery library. I also have worked on HTML and SCSS with
                 Gulp,
                 npm and Git.</p>
-              <a class="link" href="https://www.userspots.com/cases/fiat" target="_blank">userspots.com/cases/fiat</a>
+              <a class="link" href="javascript:" target="_blank">userspots.com/cases/fiat</a>
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -354,7 +354,7 @@
               <p class="employer">Employer: Taze</p>
               <p class="text">Tofaş Case was a case study project for Userspots. It is a static website and It was one
                 of my early works at Taze. I have mostly worked on HTML and SCSS with Gulp, npm and Git.</p>
-              <a class="link" href="http://www.userspots.com/tofas-intranet/"
+              <a class="link" href="javascript:"
                 target="_blank">userspots.com/tofas-intranet</a>
           </div>
           <div class="screen-mockup">
@@ -410,13 +410,13 @@
                 <p class="duration">Front-End Developer, August 2019 to Current</p>
                 <p class="text">I am a member of the Engagement Hackers Team, I was also a part of the Growth Hackers and Maintenance Team before.</p>
               </li>
-              <li class="item">
+              <!-- <li class="item">
                 <h2 class="title">Freelance - Eskişehir</h2>
                 <p class="duration">Front-End Developer, July 2018 to August 2019</p>
                 <p class="text">I understand and help my clients depending on their needs not only in front-end but
                   also
                   in UX/UI design and visual communication processes as a consultant.</p>
-              </li>
+              </li> -->
               <li class="item">
                 <h2 class="title">Taze - İstanbul</h2>
                 <p class="duration">Junior Front-End Developer, September 2017 to July 2018</p>
@@ -534,13 +534,9 @@
                 Manager in my projects, improved my CSS development speed and process. This was a good ‘welcome’ to the
                 industry in
                 2017.</p>
-              <p class="text">2018 was the year that I started to get involved writing more JavaScript and I covered
-                very important
-                concepts with the
-                language and learnt a couple of design patterns. It helped me a lot to organize and maintain my code. I
-                have delivered
-                many tiny and a couple of mid-sized web projects. I have attended as an instructor to the Front-End Camp
-                2018, organised
+              <p class="text">I joined to Jotform in 2019 and had a chance to work in cross-functional teams. It is great to broaden the point of view and enables learn this different fields.
+                I am happy contributing a Saas product and make work my code at scale.
+                I have attended as an instructor to the Front-End Camp 2018, organised
                 by <a href="https://tazebt.com/" target="_blank">Taze.</a>
                 <a href="https://www.slideshare.net/CihanBaran1/temel-basic-html-ve-css-frontend-camp-2018"
                   target="_blank">Check out my presentation.</a>
