--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
       <!-- hero-skills -->
       <div class="hero-skills">
         <ul class="list">
-          <li class="item">Html5</li>
-          <li class="item">Css3</li>
-          <li class="item">Redux</li>
+          <li class="item">Html</li>
+          <li class="item">Css</li>
           <li class="item highlight">React</li>
-          <li class="item ">Js</li>
-          <li class="item">Gulp</li>
+          <li class="item">Redux</li>
+          <li class="item">Js</li>
+          <li class="item">Webpack</li>
         </ul>
       </div>
     </section>
