--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <p class="text">We scaled the CSS and JS by writing them
                 in component based. The JavaScript is written in object literal pattern. We used SCSS, jQuery, .NET MVC,
                 npm, Gulp and Git.</p>
-              <a class="link" href="javascript:" target="_blank">enta.org.tr</a>
+              <!-- <a class="link" href="javascript:" target="_blank">enta.org.tr</a> -->
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -218,7 +218,7 @@
                 the largest scholarship platforms in Turkey. I have developed UI components, some basic interactions
                 mostly used on
                 websites. We used HTML, SCSS, jQuery, Gulp, npm and Git. I used revealing pattern in the JavaScript.</p>
-              <a class="link" href="javascript:" target="_blank">e-bursum.com</a>
+              <!-- <a class="link" href="javascript:" target="_blank">e-bursum.com</a> -->
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -246,8 +246,7 @@
               <p class="text">I have heavily used JavaScript in this project. I have fetched the data by using jQuery
                 Ajax and rendered
                 the components dynamically. I have used HTML, SCSS, jQuery with Gulp, npm and Git.</p>
-              <a class="link" href="javascript:"
-                target="_blank">ioxdigital.com/trend-reports</a>
+              <!-- <a class="link" href="javascript:" target="_blank">ioxdigital.com/trend-reports</a> -->
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -276,8 +275,7 @@
               <p class="text">I have fetched the data of the cards and the categories with jQuery AJAX and rendered them
                 randomly based
                 on user's click event. I have used HTML, SCSS, jQuery with Gulp, npm and Git.</p>
-              <a class="link" href="javascript:"
-                target="_blank">ioxdigital.com/blend-the-trend</a>
+              <!-- <a class="link" href="javascript:" target="_blank">ioxdigital.com/blend-the-trend</a> -->
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -302,7 +300,7 @@
               <p class="employer">Employer: Taze</p>
               <p class="text">I have delivered the front-end templates given by the design team at Taze. I have used
                 HTML, SCSS, jQuery, Gulp, npm and Git as a tech stack.</p>
-              <a class="link" href="javascript:" target="_blank">mikrox.com.tr</a>
+              <!-- <a class="link" href="javascript:" target="_blank">mikrox.com.tr</a> -->
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -329,7 +327,7 @@
                 done in a full screen transition form via a jQuery library. I also have worked on HTML and SCSS with
                 Gulp,
                 npm and Git.</p>
-              <a class="link" href="javascript:" target="_blank">userspots.com/cases/fiat</a>
+              <!-- <a class="link" href="javascript:" target="_blank">userspots.com/cases/fiat</a> -->
           </div>
           <div class="screen-mockup">
             <div class="part-1">
@@ -354,8 +352,7 @@
               <p class="employer">Employer: Taze</p>
               <p class="text">Tofaş Case was a case study project for Userspots. It is a static website and It was one
                 of my early works at Taze. I have mostly worked on HTML and SCSS with Gulp, npm and Git.</p>
-              <a class="link" href="javascript:"
-                target="_blank">userspots.com/tofas-intranet</a>
+              <!-- <a class="link" href="javascript:" target="_blank">userspots.com/tofas-intranet</a> -->
           </div>
           <div class="screen-mockup">
             <div class="part-1">
