--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <li class="item highlight">React</li>
           <li class="item">Redux</li>
           <li class="item">Js</li>
-          <li class="item">Webpack</li>
+          <li class="item">Thunk</li>
         </ul>
       </div>
     </section>
