--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 Manager in my projects, improved my CSS development speed and process. This was a good ‘welcome’ to the
                 industry in
                 2017.</p>
-              <p class="text">I joined to Jotform in 2019 and had a chance to work in cross-functional teams. It is great to broaden the point of view and enables learn this different fields.
+              <p class="text">I joined to Jotform in 2019 and had a chance to work in cross-functional teams. It is great to broaden the point of view in the areas other than programming.
                 I am happy contributing a Saas product and make work my code at scale.
                 I have attended as an instructor to the Front-End Camp 2018, organised
                 by <a href="https://tazebt.com/" target="_blank">Taze.</a>
